# bma-in-retail-forecasting

./: .gitignore  CITATION.cff  LICENSE  README.md  pyproject.toml
environments/: deepar_tft_environment.yaml  deeptcn_environment.yaml  main_environment.yaml
notebooks/: Exploration.ipynb
src/: config.py  ensemble_bma.py  main.py  train_baseline.py
src/DeepAR_TFT/: main_deepar_tft.py  preprocess_deepar_tft.py  train_deepar.py  train_tft.py  zinb_loss.py
src/DeepAR_TFT/old/: preprocess_deepar_old.py  train_deepar_old.py  train_tft_old.py
src/DeepTCN/: main_deeptcn.py  negbinom_forecast.py  preprocess_deeptcn.py  utils.py
src/DeepTCN/MxnetModels/: negbinom_models.py  negbinom_trainer.py
src/master_thesis.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
src/utils/: evaluate_preds.py  preprocess_dataset.py  report_results.py  utils.py
